			SWI-Prolog ChangeLog
			====================

VERSION 4.0.11
==============

  * PORT: Integrated patches by John Towler, mostly dealing with
    building XPCE and the other SWI-Prolog packages on NetBSD.  Many
    apply to other BSD variations.  Thanks!

  * FIXED: Many typos and some clarifications in the manual pointed out
    by Jack Keel.  Thanks!

  * FIXED: predicate reference handling when running out of stack.  This
    could leave the system unstable after an out-of-stack, especially
    caused by dynamic code.

  * FIXED: Documentation of file_directory_name/2 (Lourens van der
    Meij).

  * PORT: Deal with missing rl_done declarations from older readline
    libraries (Nide Naoyuki).

  * FIXED: Language setting for test.pl (Nide Naoyuki).

  * FIXED: Check argument domain of random/1 and properly report error.
    Spotted by Pablo Lopez.

  * FIXED: Avoid absolute_file_name/[2,3] to dig indefinitely for
    non-existing paths if there is a recursive definition in the search
    paths (Bob Wielinga).

  * ADDED: set_prolog_flag(verbose_file_search, true). to make
    absolute_file_name/[2,3] print what it is doing.

  * FIXED: Avoid crash in concat_atom/2 when called with a list holding
    variables (Lourens van de Meij).

  * FIXED: avoid using alloca() in recorded terms with many variables.  Found
    by Lyosha Ilyukhin.

  * MODIFIED: current_thread(id, X) to fail silently if id is of the right
    type, but the thread doesn't exist.  dima@solvo.ru.

  * FIXED: library(readutil), read_file_to_terms: option handling and
    end-of-file detection.

  * FIXED: writef('\\X'), where is is not a digit raised exception.  Now
    writes \X.  Patch by Lyosha Ilyukhin.

  * FIXED: report "x, ), y" as syntax error rather then , ')', y.  Reported
    by Tolga Konik.

  * ADDED: installation of dotfiles (Unix Makefile)

  * ADDED: edit/1 to include definition for uedit32 (Tolga Konik)

  * IMPROVED: edit/1 feedback when calling user editor through shell/2.
