@@ -441,6 +441,8 @@ pl_thread_create(term_t goal, term_t id, term_t options)
 
   if ( !info )
     return PL_error(NULL, 0, NULL, ERR_RESOURCE, ATOM_threads);
+  if ( !pl_callable(goal) )
+    return PL_error(NULL, 0, NULL, ERR_TYPE, ATOM_callable, goal);
 
   ldnew = info->thread_data;
 
